Fix counter display on mobile device

--- a/css/routesetting.css
+++ b/css/routesetting.css
@@ -31,6 +31,7 @@
 }
 
 #counter {
+    width: 100%;
     height: 80vh;
     padding: 20px 30px;
     background: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url(../img/28768142_1677596075658557_1437857124_o.jpg) no-repeat center fixed; 
@@ -38,7 +39,6 @@
     color: #FFFFFF;
     text-align: center;
 }
-
 
 .counter {
     margin-top: 50px;
